# Server-Data-Whisperer-Bot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
config_data/: ConfigBot.cpp  ConfigBot.h
module/: FileStateModule.cpp  FileStateModule.h  NetScanModule.cpp  NetScanModule.h
src/: data_bot.h  main.cpp
